--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,8 @@ ENV/
 numpy_tricks/linalg/gufuncs_blas.c
 numpy_tricks/linalg/gufuncs_cloop.c
 numpy_tricks/linalg/gufuncs_lapack.c
+numpy_tricks/linalg/gufuncs_lu_solve.c
+numpy_tricks/linalg/gufuncs_qr_lstsq.c
 numpy_tricks/linalg/rearrange_data.c
 numpy_tricks/linalg/.cquery
 numpy_tricks/linalg/compile_commands.json
