ignore generated c files

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,6 @@ numpy_tricks/linalg/gufuncs_lapack.c
 numpy_tricks/linalg/.cquery
 numpy_tricks/linalg/compile_commands.json
 numpy_tricks/linalg/compile_commands.fail.json
+numpy_tricks/linalg/gufuncs_lu_solve.c
+numpy_tricks/linalg/gufuncs_qr_lstsq.c
+numpy_tricks/linalg/rearrange_data.c
